Booktitle cutoff responsiveness fixed ✅

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -758,7 +758,7 @@ input[type="file"] {
 
 .book-cut-title {
   overflow: hidden;
-  max-width: 150px;
+  max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
